<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kosanKu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    
    
     <string-array name="nav_drawer_items_user">
        <item>Home</item>
        <item>Nearby</item>
        <item>Login</item>
    </string-array>
   <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items_member">
        <item>Home</item>
        <item>Profile</item>
        <item>Tambah Kos</item>        
        <item>Nearby</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home</item>
        <item>@drawable/nearby</item>
        <item>@drawable/login</item>
        <item>@drawable/profile</item>
        <item>@drawable/add</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- fragment carikos -->
    <string name="rentang_harga">Rentang Harga</string>
    <string name="lokasi">Lokasi</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="fasilitas">Fasilitas</string>

    <!-- Fasilitas -->
    <string name="tempat_tidur">Tempat Tidur</string>
    <string name="lemari">Lemari</string>
    <string name="meja_belajar">Meja Belajar</string>
    <string name="kamar_mandi_dalam">Kamar Mandi Dalam</string>
    <string name="ac">AC</string>
    <string name="wifi">WIFI</string>
    <string name="dapur">Dapur Bersama</string>
    

    <!-- tambah kos -->
    <string name="tambah_kos">Tambah Kos</string>
    <string name="nama_kos">Nama Kos</string>
    <string name="alamat">Alamat</string>
    <string name="no_telpon">No Telepon</string>
    <string name="jumlah_kamar">Jumlah Kamar</string>
    <string name="jenis_kos">Jenis Kos</string>
    <string name="harga_sewa">Harga Sewa</string>
    <string name="fasilitas_kos">Fasilitas Kos</string>
    <string name="fasilitas_sekitar">Fasilitas Sekitar</string>
    <string name="unggah_gambar">Unggah Gambar</string>
    <string name="tag_lokasi_kos"></string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="profil">profil</string>
    <!-- general -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="Signup">Signup</string>
    <string name="cari">Cari</string>
    <string name="login">Login</string>
    <string name="nearby">Nearby</string>
    <string name="setting">Setting</string>
    <string name="title_activity_fragment_lokasi_kos">Map</string>
    <string name="hasil_pencarian">Hasil Pencarian Kos</string>
	<string name="insert_photo">Insert Photo</string>
    
    <!-- Profile -->
    <string name="nama">Nama</string>
    <string name="alamat_profile">Alamat</string>
    <string name="no_telp">No. Telepon</string>

    
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps_location">GPS Location</string>
    
    <string name="url_add_kosan">http://152.118.37.39/sig/application/add_kosan.php</string>
	<string name="url_select_all">http://152.118.37.39/sig/application/all_kosan.php</string>
</resources>
