<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="20dp"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_toRightOf="@+id/tvUsername"
            android:layout_alignBottom="@+id/tvUsername"
            android:layout_alignBaseline="@+id/tvUsername"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_below="@+id/tvUsername"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_toRightOf="@+id/tvPassword"
            android:layout_alignBottom="@+id/tvPassword"
            android:layout_alignBaseline="@+id/tvPassword"
            android:textSize="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_below="@+id/tvPassword"
            android:layout_marginTop="20dp" />
    </RelativeLayout>
</RelativeLayout>
